Thu Jul  4 08:29:22 EDT 2002	Brian Bruns <camber@ais.org>
	*src/tds/*.c: add ifdef DMALLOC
	*src/tds/mem.c: remove possible free of NULL pointer
	* src/tds/write.c: (freddy77) write all packet to socket (fix for very 
		long query) 
	* src/tds/config.c: (freddy77) fix buffer overflow

Mon Jul  1 18:06:23 EDT 2002	Brian Bruns <camber@ais.org>
	*src/tds/mem.c: add fields to tds_free_config and call tds_free_msg in
		tds_free_socket (dnr)
	*src/tds/token.c(tds_process_msg): call tds_free_msg

Sun Jun 30 20:35:41 EDT 2002	Brian Bruns <camber@ais.org>
	*include/sybdb.h: add defines for severity levels

Fri Jun 28 00:10:15 EDT 2002	Brian Bruns <camber@ais.org>
	*configure.in: change version number in preparation for 0.60

Tue Jun 11 07:18:29 EDT 2002	Brian Bruns <camber@ais.org>
	*src/apps/tsql.c: get conversion type before calling tds_convert
	*src/apps/freebcp.c: memset PARAMDATA structure to 0 (Bill)

Sun Jun  9 18:17:46 EDT 2002	Brian Bruns <camber@ais.org>
	* src/apps/Makefile.am: initial implementation
	* src/apps/freebcp.c: initial implementation (Bill Thompson)
	* src/apps/freebcp.h: initial implementation (Bill Thompson)
	* src/apps/tsql.c: initial implementation
	* src/tds/token.c: remove check for parent on call to message handler

Sun Jun  9 09:47:34 EDT 2002	Viktar Klimkovitch <vklimk@yahoo.com>
	* src/odbc/convert_sql2string.c:
	- add checking of ODBC driver version
	* src/odbc/odbc.c:
	- move LogError() to odbc_util.c to odbc_LogError()
	- replace all LogError() calls to odbc_LogError()
	- add checking of ODBC driver version
	- add more logging
	- fix SQLGetFunctions()
	- improve SQLGetInfo() a little
	- change ODBC driver version to 02.00 to help driver
	   manager do it's work
	- improve SQLGetStmtOption()/SQLSetStmtOption() a little
	- improve SQLGetConnectionOption()/SQLSetConnectionOption() a little
	* src/odbc/odbc_util.c:
	- add declaration of odbc_LogError() and odbc_GetLastError()
	- add implementation of odbc_LogError() and odbc_GetLastError()